@@ -3,6 +3,9 @@ ZEsarUX 13 - xxx edition. 08 October 2025
 Added setting to automatically order icons on ZX Desktop
 Allow drag&drop of compressed files
 
+Improved ZX Vision:
+- Added new Top Menu (not enabled by default)
+
 Improved editing joystick to events/keys (allow to unasign easily)
 Improved debug cpu: show when registers values are modified by last opcode execution
 
